--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_marginTop="120dp"
         android:text="Who is the current US president?"
         android:textAlignment="center"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:hint="Empty question"/>
 
     <TextView
         android:id="@+id/flashcard_answer"
@@ -23,5 +24,17 @@
         android:text="Donald J Trump"
         android:textAlignment="center"
         android:textSize="40sp"
-        android:visibility="invisible"/>
+        android:visibility="invisible"
+        android:hint="Empty answer"/>
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="98dp"
+        android:layout_height="67dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
+        android:layout_marginEnd="25dp"
+        android:layout_marginBottom="25dp"
+        app:srcCompat="@drawable/add_sign" />
+
 </RelativeLayout>
