--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,7 +10,7 @@
         android:id="@+id/flashcard_question"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="120dp"
+        android:layout_marginTop="20dp"
         android:text="Who is the current US president?"
         android:textAlignment="center"
         android:textSize="40sp"
@@ -20,12 +20,14 @@
         android:id="@+id/flashcard_answer"
         android:layout_width="match_parent"
         android:layout_height="200dp"
-        android:layout_marginTop="120dp"
+        android:layout_alignParentStart="true"
+        android:layout_marginStart="0dp"
+        android:layout_marginTop="20dp"
+        android:hint="Empty answer"
         android:text="Donald J Trump"
         android:textAlignment="center"
         android:textSize="40sp"
-        android:visibility="invisible"
-        android:hint="Empty answer"/>
+        android:visibility="invisible" />
 
     <ImageButton
         android:id="@+id/imageButton"
@@ -36,5 +38,14 @@
         android:layout_marginEnd="25dp"
         android:layout_marginBottom="25dp"
         app:srcCompat="@drawable/add_sign" />
+
+    <ImageButton
+        android:id="@+id/next_button"
+        android:layout_width="97dp"
+        android:layout_height="67dp"
+        android:layout_alignStart="@+id/imageButton"
+        android:layout_marginStart="2dp"
+        android:layout_marginTop="230dp"
+        app:srcCompat="@drawable/next_icon" />
 
 </RelativeLayout>
